--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="col-12 wraper">
         <div class="container">
             <div class="row">
-                <img class="w-100 image" src="./images/panner.jpg">
+                <img class = "col-12 image" src=".//images/panner.jpg" alt="">
             </div>
             <!-- Pure CSS Percentage Circle: https://www.codeply.com/go/siNKzcCRcs -->
             <div class="row">
